--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/asknestor-apps/github#readme",
   "dependencies": {
+    "date-utils": "^1.2.18",
     "githubot": "^1.0.0",
     "nestorbot": "^0.17.0"
   }
